--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,11 +1,19 @@
-name: .NET
+name: Android Studio MUI from JetBrains (Auto)
+
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "development", "master" ]
+  pull_request:
+    branches: [ "development" ]
   workflow_dispatch:
+
 jobs:
   build:
+
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      
     steps:
     - uses: actions/checkout@v4
 
