--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches: [ "development" ]
   workflow_dispatch:
+  schedule:
+    - cron: '0 12 * * *'
 
 jobs:
   build:
@@ -26,24 +28,27 @@ jobs:
         fileCode=$(cat "$HOME/list.json" | jq -r ".[0].code")
         fileName=${fileCode}_${fileVersion}_${fileBuild}
         echo 文件名 $fileName 文件URL $fileUrl
-        echo "releaseName=${{github.event.repository.name}}_Actions_${fileName}" >> $GITHUB_ENV
-        echo "tagName=${{github.event.repository.name}}_Actions_${fileName}" >> $GITHUB_ENV
+        releaseName=${{github.event.repository.name}}_Actions_${fileName}
+        tagName=$releaseName
+        echo "releaseName=${releaseName}" >> $GITHUB_ENV
+        echo "tagName=${tagName}" >> $GITHUB_ENV
         echo "fileUrl=$fileUrl" >> $GITHUB_ENV
         latestTagName=$(curl -s -H "Authorization: token ${{secrets.GITHUB_TOKEN}}" \
-          https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r '.tag_name')
-        if [[ "$latestTagName" == "${{env.releaseName}}" ]]; then
-          echo "$latestTagName 已上传，无需执行"
-          echo "isUploadedFile=true" >> $GITHUB_ENV
+          https://api.github.com/repos/${{github.repository}}/releases/latest | jq -r '.tag_name')
+        echo 当前预发布标签名 $tagName 最新已发布标签名 $latestTagName
+        if [[ "$latestTagName" == "$releaseName" ]]; then
+          echo "$latestTagName 已发布，无需执行"
+          echo "canExecute=false" >> $GITHUB_ENV
         else
-          echo "isUploadedFile=false" >> $GITHUB_ENV
+          echo "canExecute=true" >> $GITHUB_ENV
         fi
 
     - name: 安装.NET
-      if: ${{env.isUploadedFile == 'false'}}
+      if: ${{env.canExecute == 'true'}}
       uses: actions/setup-dotnet@v4
 
     - name: 构建HttpCompressionFileExtractor
-      if: ${{env.isUploadedFile == 'false'}}
+      if: ${{env.canExecute == 'true'}}
       run: |
         cd ./HttpCompressionFileExtractor/HttpCompressionFileExtractor.Cli
         dotnet publish --configuration=Release --framework=net8.0 --runtime=linux-x64 --output=$HOME/Programs/HttpCompressionFileExtractor /p:PublishSingleFile=true
@@ -51,7 +56,7 @@ jobs:
         ls $HOME/Programs/HttpCompressionFileExtractor
 
     - name: 构建JetbrainsPluginVersionModifier
-      if: ${{env.isUploadedFile == 'false'}}
+      if: ${{env.canExecute == 'true'}}
       run: |
         cd ./JetbrainsPluginVersionModifier/JetbrainsPluginVersionModifier
         dotnet publish --configuration=Release --framework=net8.0 --runtime=linux-x64 --output=$HOME/Programs/JetbrainsPluginVersionModifier /p:PublishSingleFile=true
@@ -59,7 +64,7 @@ jobs:
         ls $HOME/Programs/JetbrainsPluginVersionModifier
 
     - name: 运行HttpCompressionFileExtractor
-      if: ${{env.isUploadedFile == 'false'}}
+      if: ${{env.canExecute == 'true'}}
       run: |
         cd $HOME/Programs/HttpCompressionFileExtractor
         ./HttpCompressionFileExtractor.Cli list --url=$fileUrl --search=localization-\\w+\\.jar --isRegex --isWebApi --isIndent > $HOME/HttpCompressionFileExtractor.json
@@ -72,7 +77,7 @@ jobs:
         done
     
     - name: 运行JetbrainsPluginVersionModifier
-      if: ${{env.isUploadedFile == 'false'}}
+      if: ${{env.canExecute == 'true'}}
       run: |
         $HOME/Programs/JetbrainsPluginVersionModifier/JetbrainsPluginVersionModifier --path=$HOME/Outputs --isWebApi --isIndent > $HOME/JetbrainsPluginVersionModifier.json
         cat $HOME/JetbrainsPluginVersionModifier.json
@@ -84,7 +89,7 @@ jobs:
         done
         
     - name: 创建发布标记
-      if: ${{env.isUploadedFile == 'false'}}
+      if: ${{env.canExecute == 'true'}}
       id: create_release
       uses: actions/create-release@v1
       env:
@@ -96,7 +101,7 @@ jobs:
         prerelease: false
 
     - name: 上传最终产物
-      if: ${{env.isUploadedFile == 'false'}}
+      if: ${{env.canExecute == 'true'}}
       id: find_and_upload_files
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
